Added performance issue, debugging logs, fixed traffic generator checkout not working. Also updated build script so we can specify which component to build to speed up rebuild process. Also added script to instrument the applications with datadog. Also updated App Service plan to B2.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       - DD_SITE=${DD_SITE:-us3.datadoghq.com}
       - DD_API_KEY=${DD_API_KEY:-}
       - DD_ENV=${DD_ENV:-local}
+      - ENABLE_SLOW_BASKET=${ENABLE_SLOW_BASKET:-false}
+      - DEBUG=${DEBUG:-false}
     depends_on:
       sqlserver:
         condition: service_healthy
