--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -12,6 +12,7 @@
     "LogLevel": {
       "Default": "Warning",
       "Microsoft": "Warning",
+      "Microsoft.eShopWeb.Infrastructure.Data": "Debug",
       "System": "Warning"
     },
     "AllowedHosts": "*"
